1.10.0

* You can now pass ``extra={'stack': True}`` to logging methods to capture
  the current frames and their locals.
* Code refactoring in various places related to stack extraction.
* Denormalized graph data in MessageCountByDate.
* Denormalized filter counts into MessageFilterValue
* Added message sampling (adapted from Yuri Baburov's patch).
* Added SENTRY_MAIL_LEVEL setting.
* Added SENTRY_MAIL_INCLUDE_LOGGERS setting.
* Added SENTRY_MAIL_EXCLUDE_LOGGERS setting.

1.9.0

* Load the Frequency chart asynchronously.
* Frequency chart no longer shows for SQLite.
* Switch graphing library to Highstock from Highcharts.

1.8.10

* Ensure dictionary keys are coerced to strings.
* Fixed path to missing_permissions.html.

1.8.9

* Safely handle unpickling objects that may not have been stored in a
  valid format.

1.8.8

* Changed ``sentry cleanup`` to use a range query.

1.8.7

* Added "Clear Feed" option.
* Version information will be read from pkg_resources if possible.
* Cleared up documentation on configuration settings..
* Performance improvements to ``Client.send()``.
* Added default 404/500 pages.
* Added support for Django's LOGIN_URL setting.
* Fixed a memory leak in the client (thanks to Ben Bangert).

1.8.6.2

* Reverted change which required distribute.
* Cleaned up configuration defaults.

1.8.6.1

* Include distribute_setup.py in the MANIFEST to ship it in sdists.

1.8.6

* Corrected an issue which was causing certain settings (like WEB_HOST) to
  not take affect in custom configuration files.
* The Sentry server will now pull in default server settings, as well as
  ~/.sentry/sentry.conf.py if --config is not passed to it.

1.8.5.1

* Fixed a bug which caused thrashing prevention to not function correctly.
* Corrected an error in transform()'s recursion safety.
* Changed packaging to use Distribute.

1.8.5

* Pulled test suite out of the Sentry namespace to avoid conflicts in projects.

1.8.4.2

* Added missing invalid_message_id template.

1.8.4.1
