@@ -3,12 +3,13 @@
 * You can now pass ``extra={'stack': True}`` to logging methods to capture
   the current frames and their locals.
 * Code refactoring in various places related to stack extraction.
-* Denormalized graph data in MessageCountByDate.
+* Denormalized graph data in MessageCountByMinute.
 * Denormalized filter counts into MessageFilterValue
 * Added message sampling (adapted from Yuri Baburov's patch).
 * Added SENTRY_MAIL_LEVEL setting.
 * Added SENTRY_MAIL_INCLUDE_LOGGERS setting.
 * Added SENTRY_MAIL_EXCLUDE_LOGGERS setting.
+* Added the ``level`` argument to the cleanup command.
 
 1.9.0
 
